--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native": "0.69.5",
     "react-native-gesture-handler": "^2.6.0",
     "react-native-safe-area-context": "^4.3.3",
+    "react-native-screens": "^3.17.0",
     "react-native-sound": "^0.11.2",
     "react-native-svg": "^13.1.0",
     "react-redux": "^8.0.2"
