--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -79,6 +79,7 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     enableHermes: false,  // clean and rebuild if changing
+    enableVmCleanup: false,
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
